; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/freescale/vybrid/extr_vf_edma.c_dma_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/freescale/vybrid/extr_vf_edma.c_dma_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.edma_softc = type { i32 }

@DMA_ERQ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.edma_softc*, i32)* @dma_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dma_stop(%struct.edma_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.edma_softc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.edma_softc* %0, %struct.edma_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.edma_softc*, %struct.edma_softc** %3, align 8
  %7 = load i32, i32* @DMA_ERQ, align 4
  %8 = call i32 @READ4(%struct.edma_softc* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = shl i32 1, %9
  %11 = xor i32 %10, -1
  %12 = load i32, i32* %5, align 4
  %13 = and i32 %12, %11
  store i32 %13, i32* %5, align 4
  %14 = load %struct.edma_softc*, %struct.edma_softc** %3, align 8
  %15 = load i32, i32* @DMA_ERQ, align 4
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @WRITE4(%struct.edma_softc* %14, i32 %15, i32 %16)
  ret i32 0
}

declare dso_local i32 @READ4(%struct.edma_softc*, i32) #1

declare dso_local i32 @WRITE4(%struct.edma_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
